# kotlin/src/main/kotlin/org/ikigaidigital/adapter/out/persistence/entity/TimeDepositEntity.kt
@@ -1,13 +1,16 @@
 package org.ikigaidigital.adapter.out.persistence.entity
 
 import jakarta.persistence.Entity
+import jakarta.persistence.FetchType
 import jakarta.persistence.GeneratedValue
 import jakarta.persistence.GenerationType
 import jakarta.persistence.Id
+import jakarta.persistence.OneToMany
 import jakarta.persistence.Table
 import jakarta.persistence.Version
 import org.hibernate.annotations.CreationTimestamp
 import org.hibernate.annotations.UpdateTimestamp
+import org.hibernate.proxy.HibernateProxy
 import java.math.BigDecimal
 import java.time.Instant
 import java.time.LocalDate
@@ -15,20 +18,38 @@ import java.time.LocalDate
 @Entity
 @Table(name = "time_deposits")
 data class TimeDepositEntity (
-
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private val id: Int? = null,
-    private val planType: String,
-    private val balance: BigDecimal,
-    private val forDate: LocalDate,
-    private val dayOfDeposit: Int,
-    private val lastInterestCalculationDate: LocalDate? = null,
-    private val nextInterestCalculationDate: LocalDate? = null,
+    val id: Int? = null,
+    val planType: String,
+    val balance: BigDecimal,
+    val forDate: LocalDate,
+    val dayOfDeposit: Int,
+    val lastInterestCalculationDate: LocalDate? = null,
+    val nextInterestCalculationDate: LocalDate? = null,
+    @OneToMany(fetch = FetchType.LAZY, mappedBy = "timeDeposit")
+    val withdrawals: MutableSet<WithdrawalEntity> = mutableSetOf(),
     @Version
-    private val version: Int? = null,
+    val version: Int? = null,
     @CreationTimestamp
-    private val createdAt: Instant? = null,
+    val createdAt: Instant? = null,
     @UpdateTimestamp
-    private val updatedAt: Instant? = null,
-)
+    val updatedAt: Instant? = null,
+) {
+    final override fun equals(other: Any?): Boolean {
+        if (this === other) return true
+        if (other == null) return false
+        val oEffectiveClass =
+            if (other is HibernateProxy) other.hibernateLazyInitializer.persistentClass else other.javaClass
+        val thisEffectiveClass =
+            if (this is HibernateProxy) this.hibernateLazyInitializer.persistentClass else this.javaClass
+        if (thisEffectiveClass != oEffectiveClass) return false
+        other as TimeDepositEntity
+
+        return id != null && id == other.id
+    }
+
+    final override fun hashCode(): Int =
+        if (this is HibernateProxy) this.hibernateLazyInitializer.persistentClass.hashCode() else javaClass.hashCode()
+}
+
