# kotlin/src/main/kotlin/org/ikigaidigital/adapter/out/persistence/entity/WithdrawalEntity.kt
@@ -11,6 +11,7 @@ import jakarta.persistence.Table
 import jakarta.persistence.Version
 import org.hibernate.annotations.CreationTimestamp
 import org.hibernate.annotations.UpdateTimestamp
+import org.hibernate.proxy.HibernateProxy
 import java.math.BigDecimal
 import java.time.Instant
 import java.time.LocalDate
@@ -21,13 +22,28 @@ data class WithdrawalEntity (
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private val id: Int? = null,
-    private val planType: String,
-    private val amount: BigDecimal,
-    private val date: LocalDate,
+    val id: Int? = null,
+    val amount: BigDecimal,
+    val date: LocalDate,
     @ManyToOne(fetch = FetchType.EAGER)
     @JoinColumn(name = "time_deposit_id")
-    private val timeDeposit: TimeDepositEntity,
+    val timeDeposit: TimeDepositEntity,
     @CreationTimestamp
-    private val createdAt: Instant? = null
-)
+    val createdAt: Instant? = null
+) {
+    final override fun equals(other: Any?): Boolean {
+        if (this === other) return true
+        if (other == null) return false
+        val oEffectiveClass =
+            if (other is HibernateProxy) other.hibernateLazyInitializer.persistentClass else other.javaClass
+        val thisEffectiveClass =
+            if (this is HibernateProxy) this.hibernateLazyInitializer.persistentClass else this.javaClass
+        if (thisEffectiveClass != oEffectiveClass) return false
+        other as WithdrawalEntity
+
+        return id != null && id == other.id
+    }
+
+    final override fun hashCode(): Int =
+        if (this is HibernateProxy) this.hibernateLazyInitializer.persistentClass.hashCode() else javaClass.hashCode()
+}
