# kotlin/src/main/kotlin/org/ikigaidigital/domain/deposit/model/TimeDepositWithWithdrawals.kt
@@ -1,0 +1,6 @@
+package org.ikigaidigital.domain.deposit.model
+
+data class TimeDepositWithWithdrawals(
+    val timeDeposit: TimeDeposit,
+    val withdrawals: Withdrawals
+)
